# PaddleOCR_OpenVINO_CPP

./: CMakeLists.txt  README.md  main.cpp  ocr_cls.h  ov_inference.py  paddle_inference.py  paddlestructure.h  postprocess_op.h  preprocess_op.h  structure_table.h
include/: args.h  cls.h  det.h  meter_config.h  ocr_det.h  ocr_rec.h  paddleocr.h  preprocess_op.h  rec.h  segmenter.h  structure_layout.h
src/: args.cpp  cls.cpp  det.cpp  meter_config.cpp  ocr_cls.cpp  ocr_det.cpp  ocr_rec.cpp  paddleocr.cpp  paddlestructure.cpp  postprocess_op.cpp  preprocess_op.cpp  rec.bak  rec.cpp  segmenter.cpp  structure_layout.cpp  structure_table.cpp
